src/objects/LicenseSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>To block or enable functionality in the client package . Indicates whether a function is enable or if there is a limit to use it.</description>
    <fields>
        <fullName>Can_Distribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can_Distribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DownloadPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user can download PPI surveys from a parent org</description>
        <label>Download PPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPI_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPI_Editable</label>
        <type>Checkbox</type>
    </fields>
    <label>LicenseSettings</label>
</CustomObject>